--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <h4>Annual Plan</h4>
           <p>$59.99/year</p>
           </section>
-          <a class="change-link" href="#">Change</a>
+          <a href="#">Change</a>
         </section>
         <a class="payment-button" href="#">Proceed to Payment</a>
-        <a href="#" class="cancel-order">Cancel Order</a>
+        <a class="cancel-order" href="#">Cancel Order</a>
       </section>
     </main>
   </body>
